@@ -1,5 +1,17 @@
 2011-09-25  Filip Pizlo  <fpizlo@apple.com>
 
+        DFG JIT does not count speculation successes correctly
+        https://bugs.webkit.org/show_bug.cgi?id=68785
+
+        Reviewed by Geoffrey Garen.
+
+        * dfg/DFGJITCompiler.cpp:
+        (JSC::DFG::JITCompiler::compileEntry):
+        (JSC::DFG::JITCompiler::compileBody):
+        * dfg/DFGOperations.cpp:
+
+2011-09-25  Filip Pizlo  <fpizlo@apple.com>
+
         DFG support for op_resolve_global is not enabled
         https://bugs.webkit.org/show_bug.cgi?id=68786
 
